--- a/Exercicios/desafio13/style.css
+++ b/Exercicios/desafio13/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+
+:root{
+    --font1: verdana, geneva, tahoma, sans-serif;
+    --font2: "Passion One", sans-serif;
+    --font3: "Caveat", cursive;
+}
 
 *{
     margin: 0px;
@@ -8,6 +16,14 @@
 html, body{
     min-height: 100%;
     background-color: lightgrey;
+    font-family: var(--font1);
+    font-size: 1.2em;
+}
+body{
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center center;
+
 }
 
 header{
@@ -19,6 +35,8 @@ header{
 header>h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 3em;
 }
 header>p{
     padding-bottom: 50px;
@@ -36,18 +54,38 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 4.5vw;
+}
+section p{
+    padding-bottom: 2em;
 }
 section.normal{
     background-color: white;
     color: rgb(0, 0, 0);
 }
 section.imagem{
-    background-color: rgb(51, 51, 51);
+    background-color: rgba(51, 51, 51, 0);
     color: rgb(255, 255, 255);
+    box-shadow: inset 6px 6px 13px 0px rgb(0, 0, 0);
+    background-size: cover;
+    background-attachment: fixed;
+}
+section#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+section#img02{
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
 }
 section.imagem>p{
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.288);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.555);
+    text-shadow: 1px 1px 0px black;
 }
 footer{
     background-color: black;
